--- a/cn.zh-CN/开发/常用命令/表操作.md
+++ b/cn.zh-CN/开发/常用命令/表操作.md
@@ -216,7 +216,7 @@ ALIYUN$odps_user@aliyun.com:table_name
 **命令格式** 
 
 ```
-SHOW PARTITIONS ; --table_name：指定查询的表名称（表不存在或非分区表报错）
+SHOW PARTITIONS table_name; --table_name：指定查询的表名称（表不存在或非分区表报错）
 ```
 
  **行为说明** 
