--- a/cn.zh-CN/用户指南/常用命令/常用命令列表.md
+++ b/cn.zh-CN/用户指南/常用命令/常用命令列表.md
@@ -14,25 +14,39 @@ MaxCompute提供了对[项目空间](intl.zh-CN/用户指南/常用命令/项目
 
 ## 常用命令 {#section_lfx_cph_rfb .section}
 
-[add](intl.zh-CN/用户指南/常用命令/资源操作.md#section_lqp_41f_vdb)[alias](intl.zh-CN/用户指南/常用命令/其他操作.md#section_kcp_t2f_vdb)[alter](intl.zh-CN/用户指南/SQL/DDL语句/表操作.md#section_k4t_2w1_wdb)
+[add](intl.zh-CN/用户指南/常用命令/资源操作.md#section_lqp_41f_vdb)
+
+[alias](intl.zh-CN/用户指南/常用命令/其他操作.md#section_kcp_t2f_vdb)
+
+[alter](intl.zh-CN/用户指南/SQL/DDL语句/表操作.md#section_k4t_2w1_wdb)
 
 [cost](intl.zh-CN/用户指南/常用命令/其他操作.md#section_xm2_sgf_vdb)[create](intl.zh-CN/用户指南/常用命令/表操作.md#section_wpz_zk2_vdb)
 
-[delete/drop](intl.zh-CN/用户指南/常用命令/资源操作.md#section_nbx_kbf_vdb)[desc/describe](intl.zh-CN/用户指南/常用命令/表操作.md#section_lln_ql2_vdb)[download/get](intl.zh-CN/用户指南/常用命令/资源操作.md#section_il1_rbf_vdb)
+[delete/drop](intl.zh-CN/用户指南/常用命令/资源操作.md#section_nbx_kbf_vdb)
+
+[desc/describe](intl.zh-CN/用户指南/常用命令/表操作.md#section_lln_ql2_vdb)
+
+[download/get](intl.zh-CN/用户指南/常用命令/资源操作.md#section_il1_rbf_vdb)
 
 [extended](intl.zh-CN/用户指南/常用命令/表操作.md#section_lln_ql2_vdb)
 
-[flag/flags](intl.zh-CN/用户指南/常用命令/Set操作.md#section_ft4_jff_vdb)[functions](intl.zh-CN/用户指南/常用命令/函数操作.md#)
+[flag/flags](intl.zh-CN/用户指南/常用命令/Set操作.md#section_ft4_jff_vdb)
+
+[functions](intl.zh-CN/用户指南/常用命令/函数操作.md#)
 
 [get](intl.zh-CN/用户指南/常用命令/其他操作.md#)
 
-[help](../../../../intl.zh-CN/工具及下载/客户端.md#section_p5h_41x_5db)[history](intl.zh-CN/用户指南/数据上传下载/Tunnel命令操作.md#section_wzb_xxf_vdb)
+[help](../../../../intl.zh-CN/工具及下载/客户端.md#section_p5h_41x_5db)
+
+[history](intl.zh-CN/用户指南/数据上传下载/Tunnel命令操作.md#section_wzb_xxf_vdb)
 
 [jar/mapreduce](intl.zh-CN/用户指南/MapReduce/功能介绍/作业提交.md#)
 
 [kill](intl.zh-CN/用户指南/常用命令/实例操作.md#section_apd_ty2_vdb)
 
-[lifecycle](intl.zh-CN/用户指南/SQL/DDL语句/生命周期操作.md#)[list](intl.zh-CN/用户指南/常用命令/资源操作.md#section_t5b_mbf_vdb)
+[lifecycle](intl.zh-CN/用户指南/SQL/DDL语句/生命周期操作.md#)
+
+[list](intl.zh-CN/用户指南/常用命令/资源操作.md#section_t5b_mbf_vdb)
 
 [odpscmd](../../../../intl.zh-CN/工具及下载/客户端.md#section_u5h_41x_5db)
 
@@ -42,13 +56,19 @@ MaxCompute提供了对[项目空间](intl.zh-CN/用户指南/常用命令/项目
 
 [resource](intl.zh-CN/用户指南/常用命令/资源操作.md#)
 
-[set](intl.zh-CN/用户指南/常用命令/Set操作.md#)[show](intl.zh-CN/用户指南/常用命令/表操作.md#section_nw1_m52_vdb)[status](intl.zh-CN/用户指南/常用命令/实例操作.md#)
+[set](intl.zh-CN/用户指南/常用命令/Set操作.md#)
+
+[show](intl.zh-CN/用户指南/常用命令/表操作.md#section_nw1_m52_vdb)
+
+[status](intl.zh-CN/用户指南/常用命令/实例操作.md#)
 
 [tunnel](intl.zh-CN/用户指南/数据上传下载/Tunnel命令操作.md#)
 
 [upload](intl.zh-CN/用户指南/数据上传下载/Tunnel命令操作.md#ul_ics_btf_vdb)
 
-[wait](intl.zh-CN/用户指南/常用命令/实例操作.md#)[who](intl.zh-CN/安全指南/安全功能详解/安全相关语句汇总/项目空间的权限管理.md#table_hw5_wj1_wdb)
+[wait](intl.zh-CN/用户指南/常用命令/实例操作.md#)
+
+[who](intl.zh-CN/安全指南/安全功能详解/安全相关语句汇总/项目空间的权限管理.md#table_hw5_wj1_wdb)
 
 ## 使用限制 {#section_c4f_tvm_sfb .section}
 
