--- a/cn.zh-CN/用户指南/SQL/UDF示例程序/取余函数示例.md
+++ b/cn.zh-CN/用户指南/SQL/UDF示例程序/取余函数示例.md
@@ -8,7 +8,7 @@
 -   功能：返回a除以b的余数
 -   参数说明：
 
-    `Integer UDFPMod(Long a, Long b)`
+    `Integer UDFPMod(Integer a, Integer b)`
 
     -   @a：Integer类型数值1
     -   @b：Integer类型数值2
@@ -16,7 +16,7 @@
 
     -   @a：Long类型数值1
     -   @b：Long类型数值2
-    `Double UDFPMod(Long a, Long b)`
+    `Double UDFPMod(Double a, Double b)`
 
     -   @a：Double类型数值1
     -   @b：Double类型数值2
